--- a/.github/workflows/buiuld_builder_image.yml
+++ b/.github/workflows/buiuld_builder_image.yml
@@ -19,11 +19,9 @@ jobs:
           
       - name: Build Docker Image
         run: |
+          cd src
           docker build --tag ${{ env.tag }}:latest \
           --tag ${{ env.tag }}:$(echo $GITHUB_SHA | head -c7) \
-          -f src/Dockerfile . 
-          
-      - name: Push Docker Image
-        run: |
+          . 
           docker push ${{ env.tag }}:latest
           docker push ${{ env.tag }}:$(echo $GITHUB_SHA | head -c7)
