--- a/.github/workflows/update_repository_packages.yml
+++ b/.github/workflows/update_repository_packages.yml
@@ -10,8 +10,6 @@ jobs:
       - name: "docker"
         uses: "docker://ghcr.io/rerigferl/vpm-repository-builder:latest"
         with:
-          args: |
-            "source.txt"
-            ${{ github.token }}
+          args: "source.txt ${{ github.token }}"
       - run: |
           cat vpm.json
