--- a/builder/builder.csproj
+++ b/builder/builder.csproj
@@ -7,6 +7,7 @@
 		<Nullable>enable</Nullable>
 		<LangVersion>preview</LangVersion>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<Version>1.0.0</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
